1.3
    - Added support for automated VHDL entity generation
    - Added Call Watcher
    - Added Memory Watcher
    - GUI polishing
    - New assembler command line options
    - New predefined constants in assembler
    - Improved documentation handling (added functioning index)

1.2 (6.1.2015)
    - Added compatibility mode for Xilinx PSM syntax
    - Added help browser
    - Added support for running external programs
    - Added file watcher
    - GUI polishing

1.1 (7.12.2014)
    - Added editor shortcuts
    - A lot of bug fixes
    - Extensive review of the User manual

1.0.3 (19.11.2014)
    - Added splash screen.
    - Bug fixes.

1.0.2 (28.10.2014)
    - Bug fixes.

1.0.1 (13.10.2014)
    - Bug fixes.

1.0 (6.10.2014)
    - Initial release.