@@ -103,6 +103,13 @@ class AsmAdaptableTreeDecoder
          */
         void phase3();
 
+        /**
+         * @brief
+         * @param[in] defaultValue
+         * @return
+         */
+        const std::string & getEntityName ( const std::string & defaultValue ) const;
+
     ////    Private Operations    ////
     private:
         /**
@@ -172,6 +179,12 @@ class AsmAdaptableTreeDecoder
          * @param[in,out] node
          */
         inline void dir_TITLE ( CompilerStatement * node );
+
+        /**
+         * @brief
+         * @param[in,out] node
+         */
+        inline void dir_ENTITY ( CompilerStatement * node );
 
         /**
          * @brief
@@ -358,6 +371,9 @@ class AsmAdaptableTreeDecoder
 
         ///
         CompilerSourceLocation m_mergeSprLoc;
+
+        ///
+        std::string m_entityName;
 };
 
 #endif // ASMADAPTABLETREEDECODER_H
