@@ -161,7 +161,7 @@
 %token D_VARIABLE       D_SET           D_DEFINE        D_UNDEFINE      D_ENDR
 %token D_AUTOREG        D_AUTOSPR       D_DATA          D_DEVICE        D_ADDRESS
 %token D_FAILJMP        D_ORGSPR        D_INITSPR       D_MERGESPR      D_PORTIN
-%token D_PORTOUT        D_STRING
+%token D_PORTOUT        D_STRING        D_ENTITY
 
 /* Instructions */
 %token I_JUMP           I_CALL          I_RETURN        I_JUMP_Z        I_CALL_Z
@@ -275,7 +275,7 @@
 %type<stmt>     dir_db_a        dir_endm_a      dir_expand_a    dir_noexpand_a  dir_autospr_a
 %type<stmt>     dir_data        dir_limit       dir_device      dir_failjmp     dir_orgspr
 %type<stmt>     dir_initspr     dir_mergespr    ifelse_blocks   dir_portin      dir_portout
-%type<stmt>     dir_string
+%type<stmt>     dir_string      dir_entity
 // Statements - instructions
 %type<stmt>     inst_jump       inst_call       inst_return     inst_add        inst_addcy
 %type<stmt>     inst_sub        inst_subcy      inst_compare    inst_returni    inst_enable_int
@@ -485,6 +485,7 @@ directive:
     | dir_orgspr    { $$ = $1; }    | dir_initspr   { $$ = $1; }
     | dir_mergespr  { $$ = $1; }    | dir_portin    { $$ = $1; }
     | dir_portout   { $$ = $1; }    | dir_string    { $$ = $1; }
+    | dir_entity    { $$ = $1; }
 ;
 dir_cond_asm:
       if_block ifelse_blocks
@@ -1766,6 +1767,9 @@ dir_messg:
                                         $label->completeDelete();
                                     }
     | D_MESSG                       { /* Syntax error */ $$ = nullptr; ARG_REQUIRED_D(@D_MESSG, "MESSG"); }
+;
+dir_entity:
+      D_ENTITY string               { $$ = new CompilerStatement(LOC(@$), ASMPICOBLAZE_DIR_ENTITY, $string); }
 ;
 dir_title:
       D_TITLE string                { $$ = new CompilerStatement(LOC(@$), ASMPICOBLAZE_DIR_TITLE, $string); }
